editor/tree-sitter-snapshot/grammar.js
/**
 * @file Snapshot test files generated by Shutter
 * @author ptdewey
 * @license MIT
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: "snapshot",

  extras: $ => [],

  rules: {
    source_file: $ => seq(
      $.front_matter,
      optional($.body)
    ),

    front_matter: $ => seq(
      $.delimiter,
      repeat($.field),
      $.delimiter
    ),

    delimiter: $ => seq('---', '\n'),

    field: $ => seq(
      $.field_name,
      ':',
      optional(seq(' ', $.field_value)),
      '\n'
    ),

    field_name: $ => /[a-z_]+/,

    field_value: $ => /[^\n]+/,

    body: $ => repeat1(choice(
      /[^\n]+/,
      /\n/
    )),
  }
});
